--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
     "name": "activecollab/controller",
-    "description": "Convenient Slit3 controller and conventions",
+    "description": "Invokeable controller that accepts containers, works with ETag and more",
+    "keywords": [
+        "controller"
+    ],
+    "license": "MIT",
+    "type": "library",
     "min-stability": "stable",
     "require": {
         "php": ">=5.6.0",
-        "activecollab/containeraccess" : "^1.0.0",
-        "activecollab/etag" : "^1.0.0",
+        "activecollab/containeraccess": "^1.0.0",
+        "activecollab/etag": "^1.0.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
