--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "activecollab/containeraccess": "^1.0",
         "activecollab/etag": "^1.0",
         "activecollab/templateengine": "^1.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "psr/log": "~1.0"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "^1.0",
