Switch to Friends of PHP CS fixer

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "psr/log": "~1.0"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "^1.0",
+        "friendsofphp/php-cs-fixer": "^1.0",
         "phpunit/phpunit": "^5.0"
     },
     "autoload": {
