--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.0",
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^5.0",
+        "slim/http": "^0.1.0"
+    },
+    "suggest": {
+        "slim/http": "Allow using of chunked file download"
     },
     "autoload": {
         "psr-4": {
