Add test classes to the autoloader

--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,10 @@
         "psr-4": {
             "ActiveCollab\\Controller\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "ActiveCollab\\Controller\\Test\\": "test/src"
+        }
     }
 }
