--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^1.0",
+        "monolog/monolog": "^1.0",
         "phpunit/phpunit": "^5.0",
         "slim/http": "^0.1.0"
     },
