--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "type": "library",
     "require": {
         "php": ">=7.1",
+        "ext-json": "*",
         "activecollab/containeraccess": "^1.0",
         "activecollab/etag": "^1.0",
         "activecollab/templateengine": "^1.0",
