--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "activecollab/etag": "^1.0",
         "activecollab/templateengine": "^1.0",
         "activecollab/utils": "^1.0",
+        "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
-        "psr/log": "~1.0"
+        "psr/log": "~1.0",
+        "zendframework/zend-diactoros": "^2.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0",
