--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
         "friendsofphp/php-cs-fixer": "^2.0",
         "monolog/monolog": "^1.0",
         "pimple/pimple": "^3.0",
-        "phpunit/phpunit": "^9.0",
-        "slim/http": "1.0"
+        "phpunit/phpunit": "^9.0"
     },
     "suggest": {
         "slim/http": "Allow using of chunked file download"
