--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "activecollab/utils": "^2.0",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
+        "psr/http-server-middleware": "^1.0",
         "psr/log": "~1.0",
         "laminas/laminas-diactoros": "^2.8"
     },
